cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)

project(histogram)
add_executable(histogram histogram.cpp)

project(bubblesort)
add_executable(bubblesort bubblesort.cpp)

project(insertionsort)
add_executable(insertsort insertionsort.cpp)

project(maximizer)
add_executable(maximizer maximizer.cpp)

project(maximizerdos)
add_executable(maximizerdos maximizerdos.cpp)

project(carteblanche)
add_executable(carteblanche carteblanche.cpp)

project(DifferenceMaker)
add_executable(DifferenceMaker DifferenceMaker.cpp)

project(TickTacToeTask)
add_executable(TickTacToeTask TicTacToeTask.cpp)